@@ -4,6 +4,7 @@
 
 MovieJukebox 2.1 BETA
 ---------------------
+  - Enhancement  #1483 XBMC-style TV artwork support
   - Enhancement  #1500 More support for folder images, for programs such as meta browser and Ember Media Manager
   - Fixed defect #1503 Filmweb plugin doesn't work after filmweb site has been changed
   - Fixed defect #1506 TV Show episodes titles in IMDB, Filmweb plugin
